# services/tuttid/api/daemon_errors.go
@@ -317,6 +317,24 @@ func writeListWorkspaceAgentSessionGitBranchesError(err error) tuttigenerated.Li
 	}
 }
 
+func writeListWorkspaceGitBranchesError(err error) tuttigenerated.ListWorkspaceGitBranchesResponseObject {
+	protocolErr := apierrors.Classify(err)
+	switch protocolErr.Code {
+	case tuttigenerated.WorkspaceNotFound:
+		return tuttigenerated.ListWorkspaceGitBranches404JSONResponse{
+			WorkspaceNotFoundErrorJSONResponse: workspaceNotFoundError(protocolErr),
+		}
+	case tuttigenerated.InvalidRequest:
+		return tuttigenerated.ListWorkspaceGitBranches400JSONResponse{
+			InvalidRequestErrorJSONResponse: invalidRequestError(protocolErr),
+		}
+	default:
+		return tuttigenerated.ListWorkspaceGitBranches502JSONResponse{
+			WorkspaceOperationErrorJSONResponse: workspaceOperationError(protocolErr),
+		}
+	}
+}
+
 func writeUpdateWorkspaceAgentSessionSettingsError(err error) tuttigenerated.UpdateWorkspaceAgentSessionSettingsResponseObject {
 	protocolErr := apierrors.Classify(err)
 	switch protocolErr.Code {
